used h1s in template to makae more readable fr right now

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -4,8 +4,8 @@
 
 <div class="container ">
     <div class="col-8 mx-auto mt-5">
-        <p class="d-block mb-2">{{ Lyric_One }}</p>
-        <p>{{ Lyric_Two }}</p>
+        <h1 class="d-block mb-2">{{ Lyric_One }}</h1>
+        <h1>{{ Lyric_Two }}</h1>
         
     </div>
 </div>
