--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,11 +1,27 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!DOCTYPE html>
 
+<html>
 
-<div class="container ">
-    <div class="col-8 mx-auto mt-5">
-        <h1 class="d-block mb-2">{{ Lyric_One }}</h1>
-        <h1>{{ Lyric_Two }}</h1>
-        
+<head>
+    <title>
+        AG Inspo
+    </title>
+    {% block stylesheets %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    {% endblock %}
+</head>
+
+<body>
+    <div class="container">
+        {% block lyrics %}
+        <div class="col-8 mx-auto mt-5">
+            <h1 class="d-block mb-2 text-center">{{ Lyric_One }}</h1>
+            <h1 class="text-center">{{ Lyric_Two }}</h1>
+            <h3>meow</h3>
+        </div>
+        {% endblock %}
     </div>
-</div>
+</body>
+
+</html>
