removed extra code from views.py

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -18,7 +18,13 @@
         <div class="col-8 mx-auto mt-5">
             <h1 class="d-block mb-2 text-center">{{ Lyric_One }}</h1>
             <h1 class="text-center">{{ Lyric_Two }}</h1>
-            <h3>meow</h3>
+        </div>
+        {% endblock %}
+
+        {% block reference %}
+        <div class="col-8 mx-auto mt-5">
+
+
         </div>
         {% endblock %}
     </div>
