added album and song reference

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -23,7 +23,8 @@
 
         {% block reference %}
         <div class="col-8 mx-auto mt-5">
-
+            <h3>{{ Album }}</h3>
+            <h3>{{ Song }}</h3>
 
         </div>
         {% endblock %}
