figured out static files and can display an image on the template

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html>
@@ -28,6 +29,11 @@
 
         </div>
         {% endblock %}
+
+
+        <img src="{% static 'images/kingcake.jpg' %}" alt="My image"/>
+
+       
     </div>
 </body>
 
