--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -31,7 +31,7 @@
         {% endblock %}
 
 
-        <img src="{% static 'images/kingcake.jpg' %}" alt="My image"/>
+        <img src="{% static 'images/'%}{{Imagepick}}" alt="My image"/>
 
        
     </div>
