--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -8,31 +8,35 @@
         AG Inspo
     </title>
     {% block stylesheets %}
-    <link rel="stylesheet" href="{% static 'styles/bootstrap-4.3.1-dist/css/bootstrap.min.css'%}" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'styles/bootstrap-4.3.1-dist/css/bootstrap.min.css'%}"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'styles/styles.css'%}" crossorigin="anonymous">
     {% endblock %}
 </head>
 
 <body>
-    <div class="container">
+    <div>
         {% block lyrics %}
-        <div class="col-8 mx-auto mt-5">
-            <h1 class="d-block mb-2 text-center">{{ Lyric_One }}</h1>
-            <h1 class="text-center">{{ Lyric_Two }}</h1>
+        <div class="container-fluid px-0 position-relative fixed-width mx-auto">
+            <div class="lyrics">
+                <h1 class="d-block mb-2 text-center mt-sm-5">{{ Lyric_One }}</h1>
+                <h1 class="text-center">{{ Lyric_Two }}</h1>
+            </div>
+            <img src="{% static 'images/'%}{{Imagepick}}" class="img-fluid px-0 " alt="inspirational image" />
+
+
         </div>
         {% endblock %}
+
 
         {% block reference %}
-        <div class="col-8 mx-auto mt-5">
-            <h3>{{ Album }}</h3>
-            <h3>{{ Song }}</h3>
+        <div class="col-8 mx-auto my-5 ">
+            <p class="m-0">Album: {{ Album }}</p>
+            <p class="m-0">Song: {{ Song }}</p>
 
         </div>
         {% endblock %}
 
-
-        <img src="{% static 'images/'%}{{Imagepick}}" alt="My image"/>
-
-       
     </div>
 </body>
 
