--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -18,9 +18,9 @@
     <div>
         {% block lyrics %}
         <div class="container-fluid px-0 position-relative fixed-width mx-auto">
-            <div class="lyrics">
-                <h1 class="d-block mb-2 text-center mt-5">{{ Lyric_One }}</h1>
-                <h1 class="text-center">{{ Lyric_Two }}</h1>
+            <div class="lyrics font-italic">
+                <h1 class="d-block mb-2 text-center mt-5 display-4">{{ Lyric_One }}</h1>
+                <h1 class="text-center display-4">{{ Lyric_Two }}</h1>
             </div>
 
             <img src="{% static 'images/'%}{{Imagepick}}" class="img-fluid px-0" alt="inspirational image" />
