--- a/mysite/polls/static/styles/styles.css
+++ b/mysite/polls/static/styles/styles.css
@@ -6,10 +6,12 @@
     margin: auto;
     text-align: center;
     z-index: 1;
-    text-shadow: 1px 1px 2px #FFFFFF, 0 0 25px #FFFFFF, 0 0 5px #FFFFFF;
-    font-weight: 900;
+    text-shadow: 0 0 1px #FFFFFF, 0 0 1px #FFFFFF, 0 0 1px #FFFFFF;
+    font-weight: bold;
+}
 
-
+h1{
+    font-size: 4rem;
 }
 
 .fixed-width{
